--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cloud_firestore: ^6.1.1
   firebase_storage: ^13.0.5
   supabase_flutter: ^2.5.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
