--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^17.0.1
   image_picker: ^1.0.7
+  intl: ^0.19.0
 
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
