replace google-services,json

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: temuin
 description: "Informasi Barang Hilang Paramadina"
 
-publish_to: 'none'
+publish_to: 'Najjuan Al Fariz'
 
 version: 1.0.0+1
 
